--- a/Develop/style.css
+++ b/Develop/style.css
@@ -1,71 +1,94 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
+  background-color: #dfe6e9;
   font-size: 16px;
   line-height: 1;
 }
 
-textarea{
+.container {
+  max-width: 1024px;
+}
+
+textarea {
   background: transparent;
   border: none;
   resize: none;
-  color: #000000;
-  border-left: 1px solid black;
+  color: rgb(82, 82, 82);
+  border-left: 1px solid rgb(82, 82, 82);
   padding: 10px;
+  letter-spacing: 1px;
 }
 
 .jumbotron {
+  background: linear-gradient(to right, #fa7a03, #0104c5);
   text-align: center;
-  background-color: transparent;
-  color: black;
+  color: white;
   border-radius: 0;
-  border-bottom: 10px solid black;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  margin-bottom: 0px;
+  border-bottom: 10px solid rgb(82, 82, 82);
 }
 
-.description{
+#clearFieldsBtn {
+  margin-top: 10px;
+}
+
+.description {
   white-space: pre-wrap;
+  font-weight: 600;
 }
 
-.time-block{
+.time-block {
   text-align: center;
-  border-radius: 15px;
 }
 
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid white;
 }
 
 .hour {
-  background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
+  background-color: #ffeaa7;
+  color: rgb(82, 82, 82);
+  padding-top: 27px;
+  padding-left: 10px;
+  font-size: 25px;
+  font-weight: 500;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
 }
 
 .past {
-  background-color: #d3d3d3;
+  background-color: #dfe6e9;
+  border-radius: 15px;
   color: white;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color: #d63031;
+  border-radius: 15px;
 }
 
 .future {
-  background-color: #77dd77;
-  color: white;
+  background-color: #55efc4;
+  border-radius: 15px;
 }
 
 .saveBtn {
-  border-left: 1px solid black;
+  border-left: 1px solid rgb(82, 82, 82);
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06AED5;
+  background-color: #fa7a03;
   color: white;
 }
 
 .saveBtn i:hover {
-  font-size: 20px;
-  transition: all .3s ease-in-out;
+  font-size: 30px;
+  transition: all 0.2s ease-in-out;
+}
+
+.white-text {
+  color: white;
 }
